fix horizontal scroll issue with copyright

--- a/src/app/game/components/game-container/game-container.component.scss
+++ b/src/app/game/components/game-container/game-container.component.scss
@@ -6,6 +6,7 @@
 }
 
 .game-layout {
+  position: relative;
   height: 100%;
   background-color: #0f0f0f;
 
